# MLForge

./: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  init-wiki.yml
docs/: ARCHITECTURE.md  DECISIONS.md
evals/: RESULTS.md  __init__.py  gate.py  harness.py  metrics.py
examples/: run_forge.py
mlforge/: __init__.py  cli.py  config.py  cv.py  metrics.py  pipeline.py  preprocessing.py  selection.py  sklearn_check.py  types.py
mlforge/data/: __init__.py  factory.py  synthetic.py
mlforge/estimators/: __init__.py  base.py  factory.py  knn.py  logistic.py  naive_bayes.py
tests/: conftest.py  test_cv.py  test_data_and_cli.py  test_estimators.py  test_pipeline.py  test_preprocessing.py  test_selection.py  test_sklearn_backend.py
